--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "babel-core": "^4.7.16",
     "expect": "^1.6.0",
     "mocha": "^2.2.1"
+  },
+  "dependencies": {
+    "ramda": "^0.13.0"
   }
 }
